# cmake-cpp-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  configure  main.cpp
src/: CMakeLists.txt  appinfo.h.in.cmake  main.cpp
test/: CMakeLists.txt
